# easyflowhub

./: .gitignore  AGENTS.md  README.md
.githooks/: commit-msg
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE_GUARDRAILS.md  PRD-v1.0.0.md  PROJECT_PROFILE.md  README.md  roadmap.md
docs/arc/: ARCHITECTURE.drawio  notes-mcp-sync-architecture.drawio
docs/checklists/: review-checklist.md  scripted-smoke.md  windows-package-smoke-2026-04-24.md  windows-package-smoke.md
docs/decisions/: ADR-0001-ai-doc-authority-and-bootstrap.md  ADR-0002-scriptmgr-automation-boundary.md  README.md
docs/plans/: 2026-03-15-mcp-implementation-plan.md  2026-03-15-mcp-integration-design.md  2026-03-17-appearance-framework-design.md  2026-03-17-ctrl-scroll-opacity-design.md  2026-03-17-manager-page-redesign.md  2026-03-17-notes-manager-design.md  2026-03-18-appearance-framework-impl.md  2026-03-19-mcp-cli-wrapper-design.md  2026-03-19-notes-mcp-sync-design.md  2026-03-23-modular-architecture-design.md  2026-03-23-phase3-scripts-panel-design.md  2026-04-07-api-relay-and-extension-phase1.md  (+14 more)
easyflowhub-app/: package-lock.json  package.json  vitest.config.ts
easyflowhub-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
easyflowhub-app/src-tauri/capabilities/: default.json
easyflowhub-app/src-tauri/src/: MODULE.md  appearance.rs  lib.rs  main.rs  mcp_server.rs  modules.rs  notes.rs  scriptmgr.rs  settings.rs  widget.rs
scriptmgr-go/: README.md  go.mod  go.sum  main.go
scripts/: build-deskflow.ps1  build-deskflow.sh  check-release-artifacts.ps1  run-smoke.ps1
(+213 files in other folders)
